<resources>
    <string name="app_name">Netball</string>
    <string name="osnovy_podacha_zag">Подача</string>
    <string name="osnovy_podacha_text">Виконує подачу гравець, який в результаті останнього переходу переміщається з другої в першу зону.\n
        Подача проводиться із зони подачі за задньою лінією ігрового майданчика. Завдання гравця, що подає, відправити м\'яч на половину
        супротивника. До того як гравець не торкнеться м\'яча при подачі, жодна частина його тіла не повинна торкнутися поверхні майданчика
        (особливо це стосується подачі в стрибку). У польоті м\'яч може торкнутися сітки, але не повинен торкатися антен або їх уявного продовження
        вгору. Якщо м\'яч торкнеться поверхні ігрового майданчика, команді, що подавала, зараховується очко. Якщо гравець, який подавав,
        порушив правила або відправив м\'яч до ауту, то очко зараховується команді, що приймала. Не дозволяється блокувати м\'яч при подачі,
        перериваючи його траєкторію над сіткою. Якщо очко вигране командою, яка подавала м\'яч, то подачу продовжує виконувати той же гравець.</string>
    <string name="osnovy_pryiom">Зазвичай приймають м\'яч гравці, які стоять на задній лінії, тобто в 5, 6, 1 зонах. Проте прийняти подачу може
        будь-який гравець. Гравцям команди, що перебувають на прийомі, дозволяється зробити три торкання і максимум після третього перевести
        м\'яч на половину супротивника. Обробляти м\'яч на прийомі можна в будь-якому місці майданчика і вільного простору, але тільки не на
        половині майданчика супротивника. При цьому, якщо доводиться пасом переводити м\'яч назад на свою ігрову половину, друга передача з
        трьох не може проходити між антенами, а обов\'язково повинна проходити поза ними. Під час прийому не допускається затримка м\'яча при
        його обробці, хоча приймати м\'яч можна будь-якою частиною тіла.</string>
    <string name="osnovy_ataka">Зазвичай при успішному прийомі м\'яч приймається гравцями задньої лінії (1-е торкання), доводиться до зв\'язкового
        гравця (2-е торкання), який передає м\'яч гравцеві атаки (3-е торкання). При ударі м\'яч, повинен пройти над сіткою, але в просторі між двома
        антенами. При цьому м\'яч може зачепити сітку, але не повинен зачіпати антени або їх уявного продовження вгору. Гравці передньої лінії
        можуть атакувати з будь-якої точки майданчика. Гравці задньої лінії перед атакою повинні відштовхуватися за спеціальною триметровою
        лінією. Ліберо заборонено атакувати, тобто завдавати удару по м\'ячу, котрий знаходиться вище за лінію верхнього краю сітки. </string>
    <string name="pravyla1">Гра ведеться на прямокутному майданчику розміром 18х9 метрів. Майданчик розділений посередині сіткою. Гра ведеться
        сферичним м\'ячем колом 65—67 см, вагою 260—280 г. Кожна з двох команд складається максимум з 12 гравців, а на полі одночасно
        знаходяться 6. Мета гри — ударом добити м\'яч до ігрової поверхні майданчика половини супротивника або примусити його помилитися.</string>
    <string name="pravyla2">Гра починається введенням м\'яча в гру за допомогою подачі. Після введення м\'яча в гру подачею і успішного розіграшу подача переходить
        до тієї команди, яка виграла очко. Майданчик за кількістю гравців умовно розділений на 6 зон. Після кожного переходу права подачі
        переходять від однієї команди до іншої в результаті розіграшу очка, гравці переміщаються в наступну зону за годинниковою стрілкою.</string>
    <string name="pravyla3">Волейбольна партія не обмежена в часі і триває до 25 очок. При цьому, якщо перевага над супротивником не досягла 2 очок,
        партія триватиме до тих пір, поки не буде досягнута потрібна перевага. Матч триває до того, як одна з команд виграє три партії. У п\'ятій
        партії рахунок ведеться до 15 очок. У кожній партії тренер кожної з команд може попросити два тайм-аути по 30 секунд. Додатково у перших 4
        партіях призначаються технічні тайм-аути після досягнення однієї з команд 8 і 16 очок (по 60 секунд). У кожній партії тренер має право
        провести не більше 6 замін польових гравців</string>

    <string name="tobibl">Бібліотека</string>
    <string name="toforum">форум</string>
    <string name="tocompetitions">новини</string>
    <string name="tocalendar">календар</string>
    <string name="faq1">Цей додаток створений для того, щоб ознайомити і допомогти розібратися людям з видом спорту під назвою волейбол.</string>
    <string name="faq2">1)поважайте інших \n 2)не спамте, не флудіть і ведіть себе адекватно \n 3) спілкуйтесь з іншими так, як хочете щоб спілкувались з вами</string>
</resources>
