<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LibrActivity">

    <item android:id="@+id/tobibl"
        android:title="@string/tobibl"
        android:orderInCategory="4"
        app:showAsAction="never"/>

    <item android:id="@+id/tonews"
        android:title="@string/tocompetitions"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item android:id="@+id/tochat"
        android:title="@string/toforum"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item android:id="@+id/tocal"
        android:title="@string/tocalendar"
        android:orderInCategory="3"
        app:showAsAction="never"/>





</menu>